--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,5 +2,5 @@
 
 
 .hero-bg{
-  background-image: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.1)) ,url("/hero.png")
+  background-image: linear-gradient(rgba(0,0,0,.8), rgba(0, 0, 0, 0.6)) ,url("/hero.png")
 }
